Update TermuxActivity.java